# lambda_calc

./: README.md  pyproject.toml
src/lambda_calc/: lambda_calc.py
