[build-system]
requires = ["poetry-core>=1.8.0", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lambda-calc"
version = "0.1.0"
description = "Path Length Lambda Helper Functions."

packages = [
    { include = "lambda_calc", from = "src" }
]

authors = ["Honglu He <heh6@rpi.edu>",]
maintainers = ["Honglu He <heh6@rpi.edu>",]

include = ["CHANGELOG.md", "LICENSE", "py.typed",]
license = "BSD-3-Clause"
readme = "README.md"

repository = "https://github.com/hehonglu123/lambda_calc"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "<2.0.0"
general_robotics_toolbox = "^0.7.2"
scipy = "^1.9.2"
